css nowrap to prevent grpdiv class items from breaking between labels and inputs, remove commented code and diagnostic console logging

--- a/styles/imggen.css
+++ b/styles/imggen.css
@@ -115,6 +115,7 @@ em {
         border-style: none;
         margin-top: 3px;
         margin-bottom: 2px;
+        white-space: nowrap;
     }
     .grpdiv>label {
         /* padding: 1px; */
